--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,10 +2,16 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.formats.fbx": "4.2.1",
+    "com.unity.render-pipelines.high-definition": "14.0.9",
+    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.shadergraph": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
+    "com.unity.toonshader": "file:D:/My Work/Asset Libary/Plug-in & Addons/Unity Packages/Toon Shader/com.unity.toonshader-development-v1/com.unity.toonshader",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
+    "com.unity.xr.management": "4.4.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
